# deepfake-detection-system

./: .env  README.md  package-lock.json  package.json
drizzle/: 0000_numerous_wolf_cub.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
services/preprocessing-service/: Dockerfile  requirements.txt
services/preprocessing-service/app/: config.py  models.py  processor.py  s3_utils.py  worker.py
services/video-ingestion-service/: Dockerfile  pyproject.toml  requirements.txt
services/video-ingestion-service/app/: config.py  kafka_utils.py  main.py  models.py  s3_utils.py  security.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api-docs/: page.tsx
src/app/api/auth/[...all]/: route.ts
src/app/api/v1/batch/: route.ts
src/app/api/v1/batch/[batch_id]/: route.ts
src/app/api/v1/detect/: route.ts
src/app/api/v1/feedback/: route.ts
src/app/api/v1/models/performance/: route.ts
src/app/api/v1/organization/analytics/: route.ts
src/app/api/v1/organization/usage/: route.ts
src/app/api/v1/result/[job_id]/: route.ts
src/app/architecture/: page.tsx
src/app/dashboard/: page.tsx
src/app/demo/: page.tsx
src/app/login/: page.tsx
src/db/: schema.ts
src/db/seeds/: api_usage_logs.ts  detection_jobs.ts  detection_results.ts  feedback.ts  model_versions.ts  organizations.ts
src/lib/: auth-client.ts  auth.ts
